2001-05-17  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Add cs, gl, id, it, ru. zh.

2001-04-30  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Add et.

2001-04-19  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.37 released.

2001-04-17  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Check for dvips, texi2pdf, texi2html.

2001-04-17  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Bump version number to 0.10.37.
	(RELEASE_DATE): Bump.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call jm_PREREQ_MBSWIDTH.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (ps, pdf, html): New targets.

2001-04-02  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Add pt_BR.

2001-03-29  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.36 released.

2001-03-28  Bruno Haible  <haible@clisp.cons.org>

	* config.guess, config.sub: Update to GNU version 2001-03-19.

2001-03-25  Bruno Haible  <haible@clisp.cons.org>

	* acconfig.h (WARN_ID_LEN): Remove macro.

2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	* INSTALL (Particular Systems): Add recommendations for AIX 3.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (MAINTAINERCLEANFILES): Remove variable.
	(EXTRA_DIST): Incorporate its contents.

2001-03-16  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Postprocess tests/Makefile to work around an
	inconsistency in automake-1.4: EXTRA_PROGRAMS is not treated like
	bin_PROGRAMS.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Add AC_REPLACE_FUNCS(strcasecmp). Needed for EMX.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Use AM_FUNC_GETLINE instead of
	AC_REPLACE_FUNCS(getline). Needed for HP-UX 10.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Pass 'need-ngettext' to AM_GNU_GETTEXT.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>
