@@ -105,8 +105,8 @@ $RELEASE_DATE  GNU  <bug-gnu-utils@gnu.org>
 
 EOF
 
-AC_OUTPUT([Makefile lib/Makefile intl/Makefile src/Makefile \
-           po/Makefile.in doc/Makefile tests/Makefile m4/Makefile \
+AC_OUTPUT([Makefile lib/Makefile intl/Makefile src/Makefile po/Makefile.in \
+           doc/Makefile man/Makefile tests/Makefile m4/Makefile \
 	   misc/Makefile misc/gettextize], [
   dnl Workaround an automake-1.4 bug which generates a distclean-recursive
   dnl target in Makefile.in which causes a "make distclean" failure on FreeBSD.
