@@ -1,0 +1,1 @@
+.so man3/gettext.3
