@@ -1,0 +1,1 @@
+.so man3/ngettext.3
