@@ -1,0 +1,10 @@
+2001-05-20  Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.am: New file.
+	* gettext.3.in: New file.
+	* ngettext.3.in: New file.
+	* textdomain.3.in: New file.
+	* bindtextdomain.3.in: New file.
+	* bind_textdomain_codeset.3.in: New file.
+	* dgettext.3, dcgettext.3, dngettext.3, dcngettext.3: New files.
+
