@@ -1,3 +1,8 @@
+2001-05-20  Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.am (SUBDIRS): Add man.
+	* configure.in (AC_OUTPUT): Add man/Makefile.
+
 2001-05-17  Bruno Haible  <haible@clisp.cons.org>
 
 	* configure.in (ALL_LINGUAS): Add cs, gl, id, it, ru. zh.
